--- a/Capillary_Utils_on_Colab.ipynb
+++ b/Capillary_Utils_on_Colab.ipynb
@@ -1,10 +1,26 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNjYz6FURHpWK5yuVDTs8J4",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Yokohide0317/Capillary-Utils/blob/main/Capillary_Utils_on_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,33 +28,44 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "IVHBuqjPxoo6"
-      },
       "source": [
         "# Capillary-Utils on Colab\n",
         "\n",
         "まず、下のセルを実行します。<br>\n",
         "（再生マークを押す or セルを選択し、 Shift + Enter）"
-      ]
+      ],
+      "metadata": {
+        "id": "IVHBuqjPxoo6"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "UT3Uqnfkw-mS"
-      },
-      "outputs": [],
       "source": [
         "!git clone https://github.com/Yokohide0317/Capillary-Utils.git\n",
         "!bash Capillary-Utils/setup4colab.sh"
+      ],
+      "metadata": {
+        "id": "UT3Uqnfkw-mS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9fecf14b-bccc-4c1d-f5ff-e4d4fcde6d8e"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "左のファイルタブを開き、「input」の中に.ab1ファイルを入れてください。\n",
+            "※複数ファイルもOKです。\n",
+            "入れたら、次のセルを実行します。\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "kTC9Ex55yB9G"
-      },
       "source": [
         "# ファイルをアップロード\n",
         "左のファイルマークをクリックし、`input`ディレクトリにファイルをアップロードします。<br><br>\n",
@@ -47,24 +74,24 @@
         "ファイルタブ上のリロードマークを押してください。<br><br>\n",
         "\n",
         "アップロードが終わったら、下のセルを実行します。"
-      ]
+      ],
+      "metadata": {
+        "id": "kTC9Ex55yB9G"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!python3 Capillary-Utils/app/capillary_cli.py all -d /content/input -o output"
+      ],
       "metadata": {
         "id": "sBNPXmRYxDbd"
       },
-      "outputs": [],
-      "source": [
-        "!python3 Capillary-Utils/app/capillary_cli.py all -d /content/input -o /content/output"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "chlCqrQVycL-"
-      },
       "source": [
         "# 結果のダウンロード\n",
         "`output`ディレクトリに結果ファイルが入っています。<br>\n",
@@ -75,37 +102,25 @@
         "| .html | ab1ファイルの可視化。PC上でダブルクリックで開けます。 |\n",
         "| .fasta | クォリティ無しの塩基配列ファイル。メモ帳などで開けます。 |\n",
         "| .fastq | クォリティ有りの塩基配列ファイル。メモ帳などで開けます。 |\n"
-      ]
+      ],
+      "metadata": {
+        "id": "chlCqrQVycL-"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
       "source": [
         "!zip -r /content/download.zip /content/output\n",
         "\n",
         "# 圧縮した zip ファイルをダウンロードする\n",
         "from google.colab import files\n",
         "files.download(\"/content/download.zip\")"
-      ]
+      ],
+      "metadata": {
+        "id": "Se1a6X-aXEsT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyMBhhRoJOc1y/EvttyTPO0X",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.10.13"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
